--- a/templates/index.html
+++ b/templates/index.html
@@ -492,11 +492,11 @@
         }
 
 
-        window.onload = function () {
-                // Clear any stored data (from localStorage, if applicable)
-                sessionStorage.clear();
+        // window.onload = function () {
+        //         // Clear any stored data (from localStorage, if applicable)
+        //         sessionStorage.clear();
 
-            };
+        //     };
 
 
             // Skip leaderboard submission and show game stats
