--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,39 @@
         .top-left-corner a:hover {
             text-decoration: underline;
         }
+
+
+
+        @media only screen and (max-width: 600px) {
+            body {
+                font-size: 14px;
+            }
+            input {
+                width: 80%;
+                font-size: 16px; /* Increase font size slightly for better readability */
+            }
+            button {
+                width: 80%;
+                font-size: 16px; /* Similarly, make buttons easier to read and tap */
+            }
+            .map-container {
+                width: 100%;
+                height: 300px;
+            }
+            table {
+                width: 100%;
+            }
+        }
+        .map-container {
+    margin: 10px auto; /* Centers the map on mobile with a small margin */
+}
+
+#give-up-modal, #leaderboard-entry {
+    max-width: 90%; /* Ensure modals don't exceed the width of smaller screens */
+}
+
+
+
     </style>
     <!-- Load Leaflet.js library for interactive map -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
@@ -285,7 +318,7 @@
 
 
         // Initialize the map using Leaflet.js
-        const map = L.map('map').setView([31.0461, 34.8516], 6);
+        const map = L.map('map').setView([31.0461, 34.8516], 7);
 
         // Load tiles for the map (without labels)
         L.tileLayer('https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png', {
