--- a/templates/index.html
+++ b/templates/index.html
@@ -144,8 +144,7 @@
 
             .map-container {
                 width: 100%;
-                height: 200px;
-                 margin: 10px auto; /* Centers the map on mobile with a small margin */
+                height: 300px;
             }
             table {
                 width: 100%;
@@ -154,12 +153,19 @@
                 padding: 10px 20px;
                 font-size: 18px;
                 margin-top: 15px;
-            }      
+            }
+
+                    .map-container {
+                margin: 10px auto; /* Centers the map on mobile with a small margin */
+            }
+        
 
         #give-up-modal, #leaderboard-entry {
             max-width: 90%; /* Ensure modals don't exceed the width of smaller screens */
         }
         }
+
+
 
     </style>
     <!-- Load Leaflet.js library for interactive map -->
