--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,12 @@
     <style>
         body {
             font-family: 'Alef', sans-serif;
-            background-color: lightblue;
+            background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
             color: blue;
             text-align: center;
             direction: rtl;
         }
+
         h1 {
             font-size: 36px;
             color: blue;
