--- a/templates/index.html
+++ b/templates/index.html
@@ -28,14 +28,6 @@ h1 {
     margin-bottom: 1rem;
 }
 
-input, button {
-    font-family: 'Assistant', 'Rubik', sans-serif;
-    font-size: 18px;
-    padding: 10px;
-    margin: 10px;
-    border: 2px solid black;
-    border-radius: 5px;
-}
 
 input {
     font-family: 'Playfair Display', 'David Libre', 'Amatic SC';
@@ -79,6 +71,7 @@ button:hover {
 }
 
 .guessed-cities-table {
+    font-family: 'Playfair Display', 'David Libre', 'Amatic SC';
     margin: 20px auto;
     width: 100%;
     max-width: 600px;
@@ -104,7 +97,7 @@ th, td {
 /* Modal styles */
 #give-up-modal, #leaderboard-entry {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -151,12 +144,13 @@ th, td {
 
 /* Copyright and contact styles */
 .top-left-corner {
+    font-family: 'Playfair Display', 'David Libre', 'Amatic SC';
     position: absolute;
     top: 10px;
     left: 10px;
     text-align: left;
     color: black; /* Changed from blue to black */
-    font-size: 0.8rem;
+    font-size: 1.0rem;
 }
 
 .top-left-corner a {
@@ -707,15 +701,16 @@ th, td {
                 <title>לוח התוצאות</title>
                 <style>
                     body {
-                        font-family: 'Alef', sans-serif;
+                        font-family: 'Playfair Display', 'David Libre', 'Amatic SC';
                         background-color: lightblue;
-                        color: blue;
+                        color: black;
                         text-align: center;
                         direction: rtl;
                     }
                     h2 {
+                        font-family: 'Playfair Display', 'David Libre', 'Amatic SC';
                         font-size: 24px;
-                        color: blue;
+                        color: black;
                     }
                     table {
                         width: 100%;
@@ -725,7 +720,7 @@ th, td {
                     }
                     th, td {
                         padding: 10px;
-                        border: 1px solid blue;
+                        border: 1px solid black;
                     }
                 </style>
             </head>
