--- a/templates/index.html
+++ b/templates/index.html
@@ -714,12 +714,14 @@ th, td {
                         color: black;
                     }
                     table {
+                        font-family: 'Fredoka', 'David Libre', 'Amatic SC';
                         width: 100%;
                         margin-top: 20px;
                         border-collapse: collapse;
                         text-align: center;
                     }
                     th, td {
+                        font-family: 'Fredoka', 'David Libre', 'Amatic SC';
                         padding: 10px;
                         border: 1px solid black;
                     }
