--- a/templates/index.html
+++ b/templates/index.html
@@ -23,12 +23,15 @@ body {
 }
 
 h1 {
-    font-family: 'Amatic SC', 'Fredoka', cursive; /* Keeping Amatic SC for headings, with Rubik as Hebrew fallback */
+    font-family: 'Amatic SC', 'Fredoka', cursive; /* Keeping Amatic SC for headings, with Fredoka as Hebrew fallback */
     font-size: 2.5rem;
     color: black;
     margin-bottom: 1rem;
 }
-
+h2 {
+    font-family: 'Fredoka', 'Alef', 'Amatic SC';
+    color:black;
+}
 
 input {
     font-family: 'Fredoka', 'David Libre', 'Amatic SC';
@@ -701,27 +704,29 @@ th, td {
             <head>
                 <title>לוח התוצאות</title>
                 <style>
+                    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Amatic+SC:wght@400;700&display=swap');
+                    @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
                     body {
-                        font-family: 'Fredoka', 'David Libre', 'Amatic SC';
+                        font-family: 'Fredoka', 'Alef', 'Amatic SC';
                         background-color: lightblue;
                         color: black;
                         text-align: center;
                         direction: rtl;
                     }
                     h2 {
-                        font-family: 'Fredoka', 'David Libre', 'Amatic SC';
+                        font-family: 'Fredoka', 'Alef', 'Amatic SC';
                         font-size: 24px;
                         color: black;
                     }
                     table {
-                        font-family: 'Fredoka', 'David Libre', 'Amatic SC';
+                        font-family: 'Fredoka', 'Alef', 'Amatic SC';
                         width: 100%;
                         margin-top: 20px;
                         border-collapse: collapse;
                         text-align: center;
                     }
                     th, td {
-                        font-family: 'Fredoka', 'David Libre', 'Amatic SC';
+                        font-family: 'Fredoka', 'Alef', 'Amatic SC';
                         padding: 10px;
                         border: 1px solid black;
                     }
